# kheops

./: CMakeLists.txt  README.md  package.xml
example/: .example_script.xml.swo  .example_script.xml.swp  .parser.cpp.swp  example_script.xml  example_sub.xml  lms.xml  op.xml  op_sm.xml  parser_xml.cpp  sub.xml  template.xml
include/: anchor.h  arithmetic.h  basicmath.h  basicneuronal.h  boolean.h  cominterface.h  div.h  factory.h  fexample.h  frunner.h  function.h  graph.h  ilink.h  input.h  kernel.h  klink.h  libManager.h  link.h  lms.h  mul.h  myfct.h  pow.h  publisher.h  resconverter.h  rosinput.h  rosinterface.h  rospublisher.h  rossubscriber.h  roswrapper.h  rttoken.h  runner.h  saw.h  serialization.h  shmserializer.h  sigmapi.h  sub.h  sum.h  trigo.h  util.h  weightconverter.h  (+1 more)
include/functions/: fexample.h
include/functions/inputs/: rosinput.h
include/functions/learning/: lms.h  saw.h  sigmapi.h
include/functions/maths/: arithmetic.h  basicmath.h  linearalgebra.h  pow.h  trigo.h
include/functions/neural_processing/: basicneuronal.h
include/functions/signal_processing/: boolean.h  fourrier.h  signal.h
include/iostream/: weightconverter.h
include/kernel/: frunner.h  function.h  graph.h  ilinkbase.h  inputbase.h  kernel.h  klink.h  libManager.h  rttoken.h  runner.h
include/kheops/iostream/: serialization.h  shmserializer.h  weightconverter.h  xmlconverter.h
include/kheops/kernel/: cominterface.h  factory.h  frunner.h  function.h  graph.h  ilinkbase.h  inputbase.h  kernel.h  klink.h  kstate.h  libManager.h  publisher.h  rttoken.h  runner.h  type.h
include/kheops/links/: imatrix.h  iscalar.h  nei_parser.h
include/kheops/ros/: fpub.h  fsub.h  rosinterface.h  rospublisher.h  rossubscriber.h  rosutil.h  roswrapper.h
include/kheops/util/: util.h
include/links/: imatrix.h  iscalar.h
include/ros/: rosinterface.h  rospublisher.h  roswrapper.h
share/man/en/: kheops
share/man/fr/: kheops
src/: .rttoken.cpp.swp  arithmetic.cpp  basicmath.cpp  basicneuronal.cpp  boolean.cpp  div.cpp  fexample.cpp  frunner.cpp  function.cpp  graph.cpp  ilink.cpp  input.cpp  kernel.cpp  libManager.cpp  lms.cpp  main.cpp  mul.cpp  myfct.cpp  pow.cpp  resconverter.cpp  rosinput.cpp  rosinterface.cpp  rospublisher.cpp  roswrapper.cpp  rttoken.cpp  runner.cpp  saw.cpp  shmserializer.cpp  sigmapi.cpp  sub.cpp  sum.cpp  trigo.cpp  util.cpp  weightconverter.cpp  xmlconverter.cpp
src/functions/: fexample.cpp
src/functions/inputs/: rosinput.cpp
src/functions/learning/: .sigmapi.cpp.swp  lms.cpp  saw.cpp  sigmapi.cpp
src/functions/maths/: arithmetic.cpp  basicmath.cpp  pow.cpp  trigo.cpp
src/functions/neural_processing/: basicneuronal.cpp
src/functions/signal_processing/: boolean.cpp  signal.cpp
src/iostream/: shmserializer.cpp  weightconverter.cpp  xmlconverter.cpp
src/kernel/: cominterface.cpp  frunner.cpp  function.cpp  ilinkbase.cpp  inputbase.cpp  kernel.cpp  libManager.cpp  rttoken.cpp  runner.cpp
src/links/: imatrix.cpp  iscalar.cpp  nei_parser.cpp
src/ros/: rosinput.cpp  rosinterface.cpp  rospublisher.cpp  rosutil.cpp  roswrapper.cpp
src/util/: util.cpp
user_src/: CMakeLists.txt  demofct.cpp  demofct.h
user_src/demofct/: CMakeLists.txt  demofct.cpp  demofct.h
xml/: arithmetic.xml  basicmath.xml  basicneuronal.xml  div.xml  fexample.xml  lms.xml  mul.xml  pow.xml  rosinput.xml  saw.xml  sigmapi.xml  sub.xml  sum.xml  trigo.xml
xml/learning/: lms.xml  saw.xml  sigmapi.xml
xml/maths/: basicmath.xml  trigo.xml
xml/neural_processing/: basicneuronal.xml
xml/signal_processing/: boolean.xml  signal.xml
